[package]
name = "PopTec"
description = "Minecraft-like game with features from various tech oriented mod-packs."

edition = "2024"

version = "0.0.1"

license = "Apache-2.0"

readme = "README.md"

repository = "https://github.com/xqzpop7/poptec"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

#Enable most optimizations in release mode
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = { version = "0.16.1", features = [ "wayland" ] }
avian3d = "0.3.1"
